--- a/bower.json
+++ b/bower.json
@@ -5,13 +5,13 @@
     "angular": "1.2.6",
     "json3": "~3.2.6",
     "es5-shim": "~2.1.0",
-    "angular-resource": "1.2.6"
-  },
-  "devDependencies": {
-    "angular-mocks": "1.2.6",
-    "angular-scenario": "1.2.6",
+    "angular-resource": "1.2.6",
     "angular-ui-router": "~0.2.12",
     "jquery": "~2.1.1",
     "lodash": "~2.4.1"
+  },
+  "devDependencies": {
+    "angular-mocks": "1.2.6",
+    "angular-scenario": "1.2.6"
   }
 }
